# streamlit_llama_index_experiment

./: .gitignore  README.md  app.py  pyproject.toml  temp.py
data/initial_conversation/: bot_client_clean.txt
data/utils/: normalize.py
onno/: __init__.py
onno/backend/cloud/data_handlers/llama_index_handler/: main.py
onno/backend/cloud/data_handlers/llamaindex_handler/: main.py
onno/backend/cloud/data_loaders/pdf_loader/: main.py  openai_utils.py
onno/backend/local/data_loaders/: pdf_loader.py
onno/frontend/: __init__.py  app.py
onno/frontend/constants/: keys.py  prompts.py
onno/frontend/constants/tool_schemas/: data.py  real_estate.py
onno/frontend/data_loaders/: github_loader.py  pdf_loader.py  web_loader.py
onno/frontend/helpers/: user_utils.py
onno/frontend/pages/: __init__.py  auth.py  authentication.py  data.py
onno/frontend/utils/: authentication_utils.py  database_utils.py  myopenai.py  openai_api.py  user_utils.py
onno/shared/: constants.py
onno/shared/utils/: auth.py  database_utils.py
